@@ -1,6 +1,6 @@
-boto3
+attr
 
-dataclasses>=0.6;python_version<'3.7'
+boto3
 
 numexpr
 numpy
